<resources>
    <string name="app_name">Covid-19 Support</string>
    <string name="action_settings">Settings</string>

    <string name="info">Info</string>
    <string name="safety_measures">Safety Measures</string>
    <string name="tracker">Tracker</string>
    <string name="about_covid_19">About Covid-19</string>
    <string name="about_info">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.\n\nMost people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.  Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.</string>
    <string name="symptoms">Symptoms</string>
    <string name="common_symptoms">Common symptoms</string>
    <string name="other_symptoms">Other symptoms</string>
    <string name="fever">Fever</string>
    <string name="tiredness">Tiredness</string>
    <string name="dry_cough">Dry cough</string>
    <string name="shortness_of_breath">Shortness of breath</string>
    <string name="aches_and_pains">Aches and pains</string>
    <string name="sore_throat">Sore throat</string>
    <string name="last_other_symptoms">and very few people will report diarrhoea, nausea or a runny nose</string>
    <string name="prevention">Prevention</string>
    <string name="prevention_1">Wash your hands regularly with soap and water, or clean them with alcohol-based hand rub.</string>
    <string name="prevention_2">Maintain at least 1 metre distance between you and people coughing or sneezing.</string>
    <string name="prevention_3">Avoid touching your face.</string>
    <string name="prevention_4">Cover your mouth and nose when coughing or sneezing.</string>
    <string name="prevention_5">Stay home if you feel unwell.</string>
    <string name="prevention_6">Refrain from smoking and other activities that weaken the lungs.</string>
    <string name="prevention_7">Practice physical distancing by avoiding unnecessary travel and staying away from large groups of people.</string>
    <string name="_0">0</string>
    <string name="all_countries">All Countries</string>
    <string name="search_by_country">Search by country</string>
    <string name="count">Count</string>
    <string name="loading">Loading…</string>
    <string name="search">Search</string>
    <string name="country_name">Country Name</string>
    <string name="total_cases">Total Cases</string>
    <string name="total_deceased">Total Deceased</string>
    <string name="new_deceased">Newly Deceased</string>
    <string name="new_cases">New Cases</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="country_stat">Country Stat</string>
    <string name="total_active">Total Active</string>
    <string name="cases_per_1m">Cases per million</string>
    <string name="last_updated_on">Last updated on:</string>
    <string name="latest_update">Latest updates</string>
    <string name="myth_busters">Myth busters</string>
    <string name="home">Home</string>
    <string name="updates">Updates</string>
    <string name="powered_by_news_api">Powered by News API</string>
    <string name="recovered_vs_deceased">Recovered vs Deceased</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article_title">Article Title</string>
    <string name="article_description">Article Description</string>
    <string name="article_image">Article Image</string>
    <string name="world">World</string>
    <string name="my_country">My Country</string>
    <string name="please_enter_your_country">Please select your country</string>
    <string name="submit">Submit</string>
    <string name="emergency_contact_numbers">Emergency Contact Numbers</string>
    <string name="credits">Credits</string>
    <string name="reset_country">Reset Country</string>
    <string name="app_info">App Info</string>
    <string name="app_info_content">COVID-19 support app for providing useful information regarding the pandemic and real time updates about the disease from around the world. Stay home. Stay safe.</string>
    <string name="contributors">Contributors</string>
    <string name="harishiv_singh">Harishiv Singh</string>
    <string name="anant_raman">Anant Raman</string>
    <string name="special_credits">Special Credits</string>
    <string name="credit_name">Credit name</string>
    <string name="repository">Repository</string>
    <string name="number">Number</string>
    <string name="state">State</string>
    <string name="splash">Splash</string>
    <string name="email">Email</string>
</resources>
