<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/country"
        android:enabled="true"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/charts"
        android:enabled="true"
        android:icon="@drawable/ic_insert_chart_white_24dp"
        android:title="@string/info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/updates"
        android:enabled="true"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="@string/updates"
        app:showAsAction="ifRoom" />
</menu>