<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <import type="android.view.View" />

        <variable
            name="infoViewModel"
            type="com.nullbyte.covid_19support.ui.info.InfoViewModel" />
        
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.info.InfoFragment">

        <LinearLayout
            android:id="@+id/cv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/light_boundary"
            android:orientation="vertical"
            android:padding="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_about_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_covid_19"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_about_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/about_info"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cv_symptoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/light_boundary"
            android:orientation="vertical"
            android:padding="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_about">

            <TextView
                android:id="@+id/tv_symptoms_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptoms"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_common_symptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/common_symptoms"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/fever"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/tiredness"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/dry_cough"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8" />

            <TextView
                android:id="@+id/tv_other_symptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/other_symptoms"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/shortness_of_breath"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/aches_and_pains"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/sore_throat"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/last_other_symptoms"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>