<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_safety_measures"
            android:icon="@drawable/ic_flag_black_24dp"
            android:title="@string/safety_measures" />
        <item
            android:id="@+id/nav_tracker"
            android:icon="@drawable/ic_tracker_black_24dp"
            android:title="@string/tracker" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />
    </group>
</menu>
