<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="safetyMeasuresViewModel"
            type="com.nullbyte.covid_19support.ui.safety_measures.SafetyMeasuresViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.safety_measures.SafetyMeasuresFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/light_boundary"
            android:orientation="vertical"
            android:padding="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prevention"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/prevention_1"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/prevention_2"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/prevention_3"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/prevention_4"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/prevention_5"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/prevention_6"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/prevention_7"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>