<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:text="@string/please_enter_your_country"
        android:textSize="@dimen/sp_20"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:padding="@dimen/dp_16"
        android:hint="@string/country_name"
        android:textSize="@dimen/sp_16"
        android:background="@drawable/light_boundary"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:paddingStart="@dimen/dp_24"
        android:paddingEnd="@dimen/dp_24"
        android:paddingTop="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_16"
        android:text="@string/submit"
        app:cornerRadius="@dimen/dp_32" />

</LinearLayout>